# structfly-doc-truth

./: .env.example  .gitignore  LICENSE  README.md  classification-design.md  classification-notebook.md  classification-setup.md  knowledge-improvement-plan.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: classification_routes.py  ingest_routes.py  review_routes.py
app/classification/: __init__.py  evaluation.py  models.py  okf_loader.py  pipeline.py  retrieval.py  validate_knowledge.py
app/core/: database.py  document_processor.py  dspy_config.py  file_utils.py  llm_runtime.py  settings.py
app/dspy_modules/: canonical_name_suggestion.py  doc_type_classifier.py  email_classifier.py  react_agent.py
app/graph/: state.py  workflow.py
app/graph/nodes/: classify.py  consolidate.py  discover.py  evidence.py  ingest.py  review.py  truth.py
app/knowledge/commercial_banking/: index.md  issue_catalog.md  log.md
app/knowledge/commercial_banking/categories/: cat_001_registered_email_change.md  cat_002_registered_phone_number_change.md  cat_003_authorized_signatory_addition.md  index.md  (+17 more)
app/static/: index.html  review.html  styles.css
app/tools/: kv_extractor.py  ner.py
notebooks/: email_classification_poc_testing.ipynb  ground_truth_building.ipynb  testing.ipynb
notebooks/data/: contract_sample.txt  email_classification_samples.jsonl  invoice_sample.txt  invoice_summary.csv  invoice_summary.docx  invoice_summary.msg  invoice_summary.txt  invoice_summary.xls  invoice_summary.xlsx  resume_sample.txt
tests/: test_knowledge_validation.py
